# diffaaable

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: pages.yaml  release.yaml  test_code.yaml
diffaaable/: __init__.py  adaptive.py  core.py  diffaaable.py  lorentz.py  parametric.py  selective.py  tensor.py  util.py  vectorial.py
diffaaable/fast_aaa/: fast_aaa.m  fast_aaa.py
diffaaable/set_aaa/: __init__.py  set_aaa.asv  set_aaa.m  set_aaa.py  test_set_aaa.asv  test_set_aaa.m
docs/: _config.yml  _toc.yml  api.rst  usage.md
docs/api/: adaptive.rst  core.rst  index.rst  lorentz.rst  selective.rst  tensor.rst  vectorial.rst
tests/: functional_gradients.py  test_adaptive.py  test_grads.py  test_lorentz.py  test_sample.py  test_selective.py  test_set.py  test_tensor.py  test_vectorial.py
